crossplane-argocd-opa/opa/policies/templates/k8sdisallowlatest-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowlatest
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowLatest
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowlatest

        get_containers(obj) = containers {
          obj.kind == "Pod"
          containers := obj.spec.containers
        }

        get_containers(obj) = containers {
          obj.kind != "Pod"
          containers := obj.spec.template.spec.containers
        }

        violation[{"msg": msg}] {
          c := get_containers(input.review.object)[_]
          endswith(c.image, ":latest")
          msg := sprintf("container %q uses forbidden latest tag", [c.name])
        }
