crossplane-argocd-opa/opa/policies/templates/k8sdisallowprivileged-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowprivileged

        get_containers(obj) = containers {
          obj.kind == "Pod"
          containers := obj.spec.containers
        }

        get_containers(obj) = containers {
          obj.kind != "Pod"
          containers := obj.spec.template.spec.containers
        }

        violation[{"msg": msg}] {
          c := get_containers(input.review.object)[_]
          c.securityContext.privileged == true
          msg := sprintf("container %q is privileged", [c.name])
        }
