crossplane-argocd-opa/opa/policies/templates/k8srequiredresources-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredresources
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredResources
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredresources

        get_containers(obj) = containers {
          obj.kind == "Pod"
          containers := obj.spec.containers
        }

        get_containers(obj) = containers {
          obj.kind != "Pod"
          containers := obj.spec.template.spec.containers
        }

        violation[{"msg": msg}] {
          c := get_containers(input.review.object)[_]
          not c.resources.requests.cpu
          msg := sprintf("container %q is missing resources.requests.cpu", [c.name])
        }

        violation[{"msg": msg}] {
          c := get_containers(input.review.object)[_]
          not c.resources.requests.memory
          msg := sprintf("container %q is missing resources.requests.memory", [c.name])
        }

        violation[{"msg": msg}] {
          c := get_containers(input.review.object)[_]
          not c.resources.limits.cpu
          msg := sprintf("container %q is missing resources.limits.cpu", [c.name])
        }

        violation[{"msg": msg}] {
          c := get_containers(input.review.object)[_]
          not c.resources.limits.memory
          msg := sprintf("container %q is missing resources.limits.memory", [c.name])
        }
